<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff00"
    android:gravity="center" >
        
	    <ImageView
	        android:contentDescription="@string/bear"
	        android:id="@+id/bear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:src="@drawable/malloy" />
	    
        <ImageView
            android:contentDescription="@string/hat"
            android:id="@+id/hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20sp"
            
            android:src="@drawable/hat" />
        
        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center"
	        android:paddingBottom="20sp"
	        android:src="@drawable/logo" />
    


</FrameLayout>